# mesa-crucible

./: .editorconfig  .gitignore  BUILDING  HACKING  INSTALL  LICENSE  Makefile.am  README  README.md  TODO.txt  autogen.sh  configure.ac  meson.build
data/: mandrill-dxt5-512x512.ktx  meson.build
doc/: crucible-bootstrap.1.txt  crucible-bootstrap.txt  crucible-dump-image.1.txt  crucible-help.1.txt  crucible-help.txt  crucible-ls-example-tests.1.txt  crucible-ls-example-tests.txt  crucible-ls-tests.1.txt  crucible-ls-tests.txt  crucible-run.1.txt  crucible-run.txt  crucible-tutorial.7.txt  crucible-version.1.txt  crucible-version.txt  junit-7.xsd  meson.build
include/crucible/: cru.h  cru_array.h  cru_cleanup.h  cru_format.h  cru_image.h  cru_log.h  cru_macros.h  cru_misc.h  cru_refcount.h  cru_slist.h  cru_test.h  cru_vec.h  cru_vk_helpers.h  qonos.h  string.h  xalloc.h
include/framework/runner/: cru_runner.h  runner.h
include/framework/test/: cru_test.h  cru_test_def.h  test.h  test_def.h
include/qonos/: qonos.h
include/tapi/: t.h  t_cleanup.h  t_data.h  t_def.h  t_dump.h  t_image.h  t_misc.h  t_result.h  t_thread.h
include/util/: cru_cleanup.h  cru_format.h  cru_image.h  cru_log.h  cru_slist.h  cru_vec.h  log.h  macros.h  misc.h  simple_pipeline.h  string.h  vk_wrapper.h  xalloc.h
m4/: ax_check_python2_module_opencv.m4  ax_check_python3_module_opencv.m4
misc/: crucible-completion.bash  crucible-report  gen_image  glsl_scraper.py
src/cmd/: bootstrap.c  cmd.c  cmd.h  dump-image.c  help.c  ls_example_tests.c  ls_tests.c  main.c  meson.build  run.c  version.c
src/crucible/: cru_array.c  cru_cleanup.c  cru_cmd.c  cru_cmd_bootstrap.c  cru_cmd_help.c  cru_cmd_ls_example_tests.c  cru_cmd_ls_tests.c  cru_cmd_main.c  cru_cmd_run.c  cru_cmd_version.c  cru_format.c  cru_image.c  cru_image.h  cru_log.c  cru_macros.h  cru_misc.c  cru_pixel_image.c  cru_png_image.c  cru_runner.c  cru_runner.h  cru_slist.c  cru_test.c  cru_test.h  cru_vec.c  cru_vk_pipeline.c  qonos.c  qonos_pipeline.c  string.c  xalloc.c
src/framework/: meson.build
src/framework/runner/: cru_runner.c  master.c  runner.c  runner.h  runner_vk.c  runner_vk.h  slave.c  slave.h
src/framework/test/: cru_test.c  t_cleanup.c  t_data.c  t_dump.c  t_image.c  t_phase_setup.c  t_phase_setup.h  t_phases.c  t_phases.h  t_result.c  t_thread.c  t_thread.h  test.c  test.h  test_def.c
src/qonos/: Makefile  meson.build  qonos.c  qonos_pipeline.c
src/tests/: meson.build
src/tests/bench/: copy-buffer.c  descriptor-pool-reset.c  multiview.c  queue-submit.c
src/tests/bug/: 104809.c  108909.c  108911.c  gitlab-4037.c
src/tests/example/: basic.c  images.c  messages.c
src/tests/func/: 4-vertex-buffers.c  bind-points.c  calibrated-timestamps.c  compute-derivative.c  compute-local-id.c  compute-num-workgroups.c  compute-shared-memory.c  compute-subgroup-quad.c  compute.c  draw-indexed.c  draw_indexed.c  event.c  first.c  interleaved-cmd-buffers.c  memory-budget.c  memory-fd.c  multiview.c  uniform-subgroup.c
src/tests/func/amd/: amd_common.c  amd_common.h  gcn_shader.c  shader_trinary_minmax.c
src/tests/func/buffer/: buffer.c
src/tests/func/buffer_reference/: atomic.c  simple.c
src/tests/func/clear/: load-clear.c
src/tests/func/cmd-buffer/: secondary.c
src/tests/func/copy/: copy-buffer.c
src/tests/func/depthstencil/: arrayed-clear.c  basic.c  stencil_triangles.c  stencil_triangles_gen.c  stencil_triangles_gen.py
src/tests/func/desc/: binding.c  dynamic.c
src/tests/func/ds/: basic.c
src/tests/func/gs/: basic.c
src/tests/func/input/: fragcoord.c
src/tests/func/miptree/: .gitignore  miptree.c  miptree_gen.c  miptree_gen.py
src/tests/func/push-constants/: basic.c
src/tests/func/query/: timestamp.c
src/tests/func/renderpass/: clear.c
src/tests/func/shader/: constants.c  fragcoord.c  pack_unpack.c
src/tests/func/shader_ballot/: amd_shader_ballot.c  ext_shader_ballot.c
src/tests/func/shader_group_vote/: ext_shader_subgroup_vote.c
src/tests/func/ssbo/: interleave.c
src/tests/func/sync/: semaphore-fd.c
src/tests/func/ubo/: robust-push-ubo.c
src/tests/functional/: first.c  interleaved-cmd-buffers.c
src/tests/self/: Makefile  README  bad-test-names.bash  concurrent-output.bash  concurrent-output.c
src/tests/stress/: alloc-multithread.c  buffer_limit.c  lots-of-surface-state.c
src/util/: cru_cleanup.c  cru_format.c  cru_image.c  cru_image.h  cru_ktx_image.c  cru_log.c  cru_pixel_image.c  cru_png_image.c  cru_vec.c  cru_vk_image.c  log.c  meson.build  misc.c  simple_pipeline.c  string.c  xalloc.c
